--- a/overlays/prd/kustomization.yaml
+++ b/overlays/prd/kustomization.yaml
@@ -3,12 +3,12 @@ kind: Kustomization
 images:
 - name: /
   newName: /
-- name: /backend-emp
-  newName: /backend-emp
-  newTag: 2e48493ccdf1b04c84c93a5fc94c24151df0e2ef
-- name: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/backend-emp
-  newName: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/backend-emp
-  newTag: acfa731786ceaa58d8220b130fce6477a99f1ccb
+# - name: /backend-emp
+#   newName: /backend-emp
+#   newTag: 2e48493ccdf1b04c84c93a5fc94c24151df0e2ef
+# - name: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/backend-emp
+#   newName: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/backend-emp
+#   newTag: acfa731786ceaa58d8220b130fce6477a99f1ccb
 - name: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/cicd-front
   newName: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/cicd-front
   newTag: 5d808c1b1bb9f826899e1062fb9fc8ff402e65dc
