--- a/resources/service.yaml
+++ b/resources/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: loadbalancer-service-1
+  namespace: cicd
 spec:
   type: LoadBalancer
   selector:
