--- a/resources/deployment.yaml
+++ b/resources/deployment.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
-  namespace: cicd
+  name: back-deployment
+  namespace: backend
   labels:
-    app: nginx
+    app: exb-back
 spec:
   revisionHistoryLimit: 3
   replicas: 3
   selector:
     matchLabels:
-      app: nginx
+      app: exb-back
   template:
     metadata:
       labels:
-        app: nginx
+        app: exb-back
     spec:
       containers:
-      - name: nginx
-        image: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/cicd-front:d0c01892d384200ba648957ca579331499ff8a0a
+      - name: exb-api
+        image: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/cicd-back:d0c01892d384200ba648957ca579331499ff8a0a
         ports:
-        - containerPort: 80
+        - containerPort: 8090
         
