--- a/resources/service.yaml
+++ b/resources/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: loadbalancer-service-1
-  namespace: cicd
+  name: backend-api
+  namespace: backend
 spec:
   type: LoadBalancer
   selector:
-    app: nginx
+    app: exb-back
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 8090
+      name: http
