--- a/resources/service.yaml
+++ b/resources/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-api
-  namespace: backend
+  name: exb-svc
+  namespace: exb
 spec:
   type: LoadBalancer
   selector:
-    app: exb-back
+    app: examboom
   ports:
     - protocol: TCP
       port: 80
