--- a/resources/ingress.yaml
+++ b/resources/ingress.yaml
@@ -1,9 +1,9 @@
 apiVersion: extensions/v1
 kind: Ingress
 metadata:
-  name: external-ingress
+  name: "external-ingress"
   labels:
-    app.kubernetes.io/name: external-ingress
+    app.kubernetes.io/name: "external-ingress"
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
