--- a/resources/ingress.yaml
+++ b/resources/ingress.yaml
@@ -11,7 +11,7 @@ metadata:
     # alb.ingress.kubernetes.io/target-type: ip
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    # alb.ingress.kubernetes.io/subnets: subnet-03d9d743dcef08178,subnet-0ba17339cf1d99402
+    alb.ingress.kubernetes.io/subnets: subnet-03d9d743dcef08178,subnet-0ba17339cf1d99402
     alb.ingress.kubernetes.io/target-type: instance
     # alb.ingress.kubernetes.io/target-type: ip
  
