--- a/resources/ingress.yaml
+++ b/resources/ingress.yaml
@@ -1,11 +1,11 @@
-apiVersion: extensions/v1beta1
-# apiVersion: networking.k8s.io/v1
+# apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: exb-ingress2
   namespace: exb
-  labels:
-    app.kubernetes.io/name: "exb-ingress2"
+  # labels:
+  #   app.kubernetes.io/name: "exb-ingress2"
   annotations:
     # alb.ingress.kubernetes.io/scheme: internet-facing
     
@@ -15,7 +15,6 @@ metadata:
     alb.ingress.kubernetes.io/target-type: instance
     # alb.ingress.kubernetes.io/target-type: ip
 
- 
 spec:
   # ingressClassName: alb
   rules:
@@ -24,13 +23,36 @@ spec:
           - path: /api/*
             pathType: Prefix
             backend:
-              serviceName: exb-back-svc
-              servicePort: 80
+              service:
+                name: exb-back-svc
+                port: 
+                  number: 80
     - http:
         paths:
           - path: /*
             pathType: Prefix
             backend:
-              serviceName: exb-front-svc
-              servicePort: 80
+              service:
+                name: exb-front-svc
+                port: 
+                  number: 80
+    
+ 
+# spec:
+#   # ingressClassName: alb
+#   rules:
+#     - http:
+#         paths:
+#           - path: /api/*
+#             pathType: Prefix
+#             backend:
+#               serviceName: exb-back-svc
+#               servicePort: 80
+#     - http:
+#         paths:
+#           - path: /*
+#             pathType: Prefix
+#             backend:
+#               serviceName: exb-front-svc
+#               servicePort: 80
     
