--- a/resources/ingress.yaml
+++ b/resources/ingress.yaml
@@ -1,8 +1,8 @@
-# apiVersion: extensions/v1beta1
-apiVersion: networking.k8s.io/v1
+apiVersion: extensions/v1beta1
+# apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: exb-ingress2
+  name: exb-ingress3
   namespace: exb
   # labels:
   #   app.kubernetes.io/name: "exb-ingress2"
@@ -15,29 +15,6 @@ metadata:
     alb.ingress.kubernetes.io/target-type: instance
     # alb.ingress.kubernetes.io/target-type: ip
 
-spec:
-  # ingressClassName: alb
-  rules:
-    - http:
-        paths:
-          - path: /api/*
-            pathType: Prefix
-            backend:
-              service:
-                name: exb-back-svc
-                port: 
-                  number: 80
-    - http:
-        paths:
-          - path: /*
-            pathType: Prefix
-            backend:
-              service:
-                name: exb-front-svc
-                port: 
-                  number: 80
-    
- 
 # spec:
 #   # ingressClassName: alb
 #   rules:
@@ -46,13 +23,34 @@ spec:
 #           - path: /api/*
 #             pathType: Prefix
 #             backend:
-#               serviceName: exb-back-svc
-#               servicePort: 80
+#               service:
+#                 name: exb-back-svc
+#                 port: 
+#                   number: 80
 #     - http:
 #         paths:
 #           - path: /*
 #             pathType: Prefix
 #             backend:
-#               serviceName: exb-front-svc
-#               servicePort: 80
+#               service:
+#                 name: exb-front-svc
+#                 port: 
+#                   number: 80
+    
+ 
+spec:
+  # ingressClassName: alb
+  rules:
+    - http:
+        paths:
+          - path: /api/*
+            backend:
+              serviceName: exb-back-svc
+              servicePort: 80
+    - http:
+        paths:
+          - path: /*
+            backend:
+              serviceName: exb-front-svc
+              servicePort: 80
     
