--- a/resources/ingress.yaml
+++ b/resources/ingress.yaml
@@ -12,8 +12,8 @@ metadata:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/subnets: subnet-03d9d743dcef08178,subnet-0609724dd9cda79f0
-    alb.ingress.kubernetes.io/target-type: instance
-    # alb.ingress.kubernetes.io/target-type: ip
+    # alb.ingress.kubernetes.io/target-type: instance
+    alb.ingress.kubernetes.io/target-type: ip
 
 # spec:
 #   # ingressClassName: alb
