--- a/resources/back-deployment.yaml
+++ b/resources/back-deployment.yaml
@@ -21,4 +21,13 @@ spec:
         image: 336481557929.dkr.ecr.ap-northeast-2.amazonaws.com/cicd-back:d0c01892d384200ba648957ca579331499ff8a0a
         ports:
         - containerPort: 8090
+        resources:
+          requests:
+            memory: "50Mi"
+            cpu: 500m
+          limits:
+            memory: "100Mi"
+            cpu: "1"
+        command: ["stress"]
+        args: ["--vm", "1", "--vm-bytes", "60M", "--vm-hang", "1"]
         
