--- a/resources/back-deployment.yaml
+++ b/resources/back-deployment.yaml
@@ -28,6 +28,6 @@ spec:
           limits:
             memory: "100Mi"
             cpu: "1"
-        command: ["stress"]
-        args: ["--vm", "1", "--vm-bytes", "60M", "--vm-hang", "1"]
+        # command: ["stress"]
+        # args: ["--vm", "1", "--vm-bytes", "60M", "--vm-hang", "1"]
         
