--- a/resources/ingress.yaml
+++ b/resources/ingress.yaml
@@ -14,6 +14,9 @@ metadata:
     alb.ingress.kubernetes.io/subnets: subnet-03d9d743dcef08178,subnet-0609724dd9cda79f0
     # alb.ingress.kubernetes.io/target-type: instance
     alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:336481557929:certificate/74cb2bea-8540-48e8-be6d-2ec9ec7d56de
+    alb.ingress.kubernetes.io/ssl-redirect: '443'
 
 # spec:
 #   # ingressClassName: alb
