--- a/resources/front-deployment.yaml
+++ b/resources/front-deployment.yaml
@@ -11,7 +11,7 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnvailable: 1
+      maxUnavailable: 1
       maxSurge: 1
   selector:
     matchLabels:
