--- a/resources/back-deployment.yaml
+++ b/resources/back-deployment.yaml
@@ -11,8 +11,8 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnvailable: 1
-      maxSurge: 1
+      maxUnavailable: 50%
+      maxSurge: 50%
   selector:
     matchLabels:
       app: exb-back
