--- a/resources/front-deployment.yaml
+++ b/resources/front-deployment.yaml
@@ -11,8 +11,8 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
+      maxUnavailable: 50%
+      maxSurge: 50%
   selector:
     matchLabels:
       app: exb-front
