--- a/resources/ingress.yaml
+++ b/resources/ingress.yaml
@@ -11,12 +11,18 @@ metadata:
     
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/group.name: alb-02
     alb.ingress.kubernetes.io/subnets: subnet-03d9d743dcef08178,subnet-0609724dd9cda79f0
     # alb.ingress.kubernetes.io/target-type: instance
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:336481557929:certificate/74cb2bea-8540-48e8-be6d-2ec9ec7d56de
-    alb.ingress.kubernetes.io/ssl-redirect: '443'
+    # alb.ingress.kubernetes.io/ssl-redirect: '443'
+    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
+
+    # external-dns.alpha.kubernetes.io/hostname: exam.viassh.com
+    
+    # external-dns: public
 
 # spec:
 #   # ingressClassName: alb
@@ -50,19 +56,19 @@ spec:
             backend:
               serviceName: exb-back-svc
               servicePort: 80
-    - http:
-            paths:
-              - path: /grafana/*
-                backend:
-                  serviceName: grafana
-                  servicePort: 80      
+    # - http:
+    #         paths:
+    #           - path: /grafana/*
+    #             backend:
+    #               serviceName: grafana
+    #               servicePort: 80      
 
-    - http:
-            paths:
-              - path: /argo/*
-                backend:
-                  serviceName: argocd-server
-                  servicePort: 80
+    # - http:
+    #         paths:
+    #           - path: /argo/*
+    #             backend:
+    #               serviceName: argocd-server
+    #               servicePort: 80
     - http:
         paths:
           - path: /*
