--- a/resources/ingress.yaml
+++ b/resources/ingress.yaml
@@ -20,7 +20,7 @@ metadata:
     # alb.ingress.kubernetes.io/ssl-redirect: '443'
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
 
-    # external-dns.alpha.kubernetes.io/hostname: exam.viassh.com
+    external-dns.alpha.kubernetes.io/hostname: exam.viassh.com
     
     external-dns: public
 
