--- a/resources/argo-ingress.yaml
+++ b/resources/argo-ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: argo-ingress
@@ -10,7 +10,7 @@ metadata:
     
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/group.name: alb-02
+    alb.ingress.kubernetes.io/group.name: alb-01
     # alb.ingress.kubernetes.io/subnets: subnet-0ec6e1005376df048,subnet-0609724dd9cda79f0
     # alb.ingress.kubernetes.io/target-type: instance
     alb.ingress.kubernetes.io/target-type: ip
@@ -24,15 +24,18 @@ metadata:
 
 spec:
   rules:
+    # - http:
+    #     paths:
+    #       - path: /*
+    #         backend:
+    #           serviceName: ssl-redirect
+    #           servicePort: use-annotation
     - http:
         paths:
-          - path: /*
+          - pathType: Prefix
+            path: /
             backend:
-              serviceName: ssl-redirect
-              servicePort: use-annotation
-    - http:
-        paths:
-          - path: /*
-            backend:
-              serviceName: argocd-server
-              servicePort: 443
+              service:
+                name: argocd-server
+                port: 
+                  number: 443
