--- a/resources/kustomization.yaml
+++ b/resources/kustomization.yaml
@@ -4,5 +4,9 @@ resources:
 - front-service.yaml
 - back-service.yaml
 - ingress.yaml
+
+- admin-deployment.yaml
+- admin-service.yaml
+
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
