--- a/resources/back-deployment.yaml
+++ b/resources/back-deployment.yaml
@@ -11,8 +11,8 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 50%
-      maxSurge: 50%
+      maxUnavailable: 1
+      maxSurge: 1
   selector:
     matchLabels:
       app: exb-back
