--- a/resources/kustomization.yaml
+++ b/resources/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 - front-service.yaml
 - back-service.yaml
 - ingress.yaml
+- argo-ingress.yaml
 - admin-deployment.yaml
 - admin-service.yaml
 
