--- a/resources/ingress.yaml
+++ b/resources/ingress.yaml
@@ -16,7 +16,8 @@ metadata:
     alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
 
     external-dns.alpha.kubernetes.io/hostname: exam.heoshicorp.com
-    external-dns: public 
+    external-dns: public
+    external-dns.alpha.kubernetes.io/aws-weight: '1'
 spec:
   # ingressClassName: alb
   rules:
