--- a/resources/kustomization.yaml
+++ b/resources/kustomization.yaml
@@ -6,7 +6,6 @@ resources:
 - front-deployment.yaml
 - front-service.yaml
 - back-service.yaml
-- ingress.yaml
-- argo-ingress.yaml
+- exb-ingress.yaml
 - admin-deployment.yaml
 - admin-service.yaml
